# adventofcode

./: .gitignore  CMakeLists.txt  README.md  day1p1.cpp  day1p2.cpp  day3p1.cpp  day3p2.cpp
2020/: day2p1.cpp  day2p2.cpp  day3p1.cpp  day3p2.cpp
2020/cpp/: day3p1.cpp  day3p2.cpp
2020/cs/: aoc2020.sln
2020/cs/aoc2020/: ISolver.cs  Program.cs
2020/cs/aoc2020/Day10/: Day10p1.cs  Day10p2.cs
2020/cs/aoc2020/Day4/: Day4p1.cs  Day4p2.cs
2020/cs/aoc2020/Day5/: Day5p1.cs  Day5p2.cs
2020/cs/aoc2020/Day6/: Day6p1.cs  Day6p2.cs
2020/cs/aoc2020/Day7/: Day7p1.cs  Day7p2.cs
2020/cs/aoc2020/Day8/: Day8p1.cs  Day8p2.cs
2020/cs/aoc2020/Day9/: Day9p1.cs  Day9p2.cs
2020/inputs/: day4formatted.txt
