cmake_minimum_required(VERSION 3.17)
project(advent_2020)

set(CMAKE_CXX_STANDARD 11)

add_executable(day1p1 2020/cpp/day1p1.cpp)
add_executable(day1p2 2020/cpp/day1p2.cpp)
add_executable(day2p1 2020/cpp/day2p1.cpp)
add_executable(day2p2 2020/cpp/day2p2.cpp)
add_executable(day3p1 2020/cpp/day3p1.cpp)
add_executable(day3p2 2020/cpp/day3p2.cpp)